base/src/test/resources/failure/tyck/issue659-01.aya.txt
In file $FILE:1:31 ->

  1 | def why {A : Type} : A -> A => \ {x} => x
                                     ^--------^

Error: Cannot check
         λ {x} ⇒ x
       against the Pi type
         Π (_ : A) → A
       because explicitness do not match

1 error(s), 0 warning(s).
What are you doing?
